# bunge-bits

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.dev.yml  rust-toolchain.toml  yt.txt
.github/: FUNDING.yml
.github/workflows/: general.yml  publish-docker-image.yml  publish.yml  rust-and-ui-checks.yml  rust.yml  ui.yml
crates/stream_datastore/: .env.development  Cargo.toml  README.md  build.rs
crates/stream_datastore/migrations/: 20250622060643_add_streams_table.sql  20250622060850_full_text_search.sql  20250622061333_add_house_generated_column.sql  20250625173106_remove-is-published-default-falue.sql
crates/stream_datastore/src/: lib.rs  store.rs
crates/stream_datastore/src/domain/: mod.rs  stream.rs
crates/stream_digest/: Cargo.toml
crates/stream_digest/src/: lib.rs  sliding_window.rs
crates/stream_pulse/: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/stream_pulse/examples/: dev-cli.rs
crates/stream_pulse/src/: main.rs
crates/stream_pulse/src/lib/: error.rs  lib.rs  parser.rs  process_stream.rs  summary.rs  tracing.rs  types.rs
crates/stream_pulse/src/lib/app/: cron.rs  mod.rs  server.rs
crates/stream_pulse/src/prompts/: system_0.txt  user_0.txt  user_1.txt  user_2.txt
crates/ytdlp_bindings/: Cargo.toml  README.md  build.rs
crates/ytdlp_bindings/src/: error.rs  lib.rs  ytldp.rs
crates/ytdlp_bindings/src/processors/: audio.rs  video.rs
datastore/: Cargo.toml
datastore/src/: lib.rs  store.rs
datastore/src/domain/: closed_captions.rs  mod.rs  stream.rs
notification_cron/: Cargo.toml
sql/: 2025-06-19-full-text-search.sql  2025-06-20-house-generated-column.sql
stream_datastore/: Cargo.toml
stream_datastore/src/: lib.rs  store.rs
stream_datastore/src/domain/: stream.rs
stream_digest/: Cargo.toml  sample.vtt
stream_digest/src/: lib.rs
stream_pulse/: Cargo.toml
stream_pulse/src/: main.rs
stream_pulse/src/lib/: lib.rs  parser.rs  process_stream.rs
stream_pulse/src/prompts/: system_0.txt  user_0.txt
ui/: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ui/app/: entry.client.tsx  entry.server.tsx  i18n.ts  root.tsx  tailwind.css
ui/app/components/: detail-page-skeleton.tsx  error-page.tsx  footer.tsx  header.tsx  language-switcher.tsx  list-page-skeleton.tsx  loader.tsx  navigation-progress.tsx
ui/app/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  separator.tsx
ui/app/data/: mock-data.ts
ui/app/i18n/: i18n.ts
ui/app/lib/: hooks.ts  language-cookie.ts  text-highlight.tsx  utils.ts
ui/app/routes/: $.tsx  _index.tsx  about.tsx  change-language.tsx  summaries.$videoId.tsx  summaries.[rss.xml].tsx  summaries._index.tsx
ui/prisma/: schema.prisma  seed.ts
ui/prisma/migrations/20250624133735_initial_migration/: migration.sql
vtt_digest/: Cargo.toml
vtt_digest/src/: lib.rs  sliding_window.rs
web_app/: Cargo.toml  Dioxus.toml
web_app/src/: main.rs
yt_parse_cron/: Cargo.toml
yt_parse_cron/src/: error.rs  main.rs  parser.rs
yt_scrape/: Cargo.toml
yt_scrape/src/: datastore.rs  error.rs  lib.rs  main.rs  parser.rs
ytdlp_bindings/: Cargo.toml  README.md  build.rs
ytdlp_bindings/src/: error.rs  lib.rs  main.rs  ytldp.rs
ytdlp_bindings/src/file_types/: audio.rs  mod.rs  video.rs  vtt.rs
ytdlp_bindings/src/processors/: video.rs  vtt.rs
ytparse_cron/: Cargo.toml
ytparse_cron/src/: error.rs  lib.rs  main.rs  parser.rs  yt_types.rs
