[workspace]
members = [
  "crates/stream_datastore",
  "crates/stream_digest",
  "crates/stream_pulse",
  "crates/ytdlp_bindings",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
