[workspace]
members = [
  "crates/stream_datastore",
  "crates/stream_pulse",
  "crates/ytdlp_bindings",
]
resolver = "2"

[workspace.package]
authors = ["c12i <hello@c12i.xyz>"]
edition = "2021"
repository = "https://github.com/c12i/bunge-bits"
categories = [
  "web-programming",
  "asynchronous",
  "parser-implementations",
  "database",
  "command-line-utilities",
]
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
