[package]
name = "yt_scrape"
version = "0.1.0"
authors = ["c12i <hello@collinsmuriuki.xyz>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
