[package]
name = "ytdlp_bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.63"
which = "6.0.3"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
glob = "0.3.1"

[features]
default = ["yt-dlp-vendored"]
yt-dlp-vendored = []