[package]
name = "ytdlp_bindings"
authors = ["c12i <hello@collinsmuriuki.xyz>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
serde_json = "1.0.128"
thiserror = "1.0.63"
which = "6.0.3"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
glob = "0.3.1"
tempfile = "3.12.0"

[features]
default = ["yt-dlp-vendored"]
yt-dlp-vendored = []
