[package]
name = "ytdlp_bindings"
description = "ytdlp cli bindings" 
authors = ["c12i <hello@collinsmuriuki.xyz>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.12"
which = "7.0.3"
webvtt-parser = { version = "1.0.0-beta.1", optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
glob = "0.3.1"
tempfile = "3.12.0"

[features]
default = ["yt-dlp-vendored", "audio-processing", "video-processing", "vtt-processing"]
yt-dlp-vendored = []
audio-processing = []
video-processing = []
vtt-processing = ["dep:webvtt-parser"]
