[package]
name = "stream_datastore"
version = "0.1.0"
edition = "2021"
authors = ["c12i <hello@collinsmuriuki.xyz>"]

[lib]
name = "stream_datastore"
path = "./src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.38"
regex = "1.10.6"
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
