[package]
name = "stream_datastore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
name = "stream_datastore"
path = "./src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
regex = "1.10.6"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "chrono",
] }
tracing = { workspace = true }
