[package]
name = "stream_pulse"
version = "0.1.0"
authors = ["c12i <hello@collinsmuriuki.xyz>"]
edition = "2021"

[[bin]]
name = "stream_pulse_cron"
path = "./src/main.rs"

[lib]
name = "stream_pulse"
path = "./src/lib/lib.rs"

[dependencies]
stream_datastore = { version = "0.1.0", path = "../stream_datastore" }
ytdlp_bindings = { version = "0.1.0", path = "../ytdlp_bindings" }
stream_digest = { version = "0.1.0", path = "../stream_digest" }
openai_dive = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
regex = "1.10.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-cron-scheduler = "0.13.0"
chrono-tz = "0.10.0"
futures = "0.3.30"
rayon = "1.5"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "registry",
] }
tracing-bunyan-formatter = "0.3"
