[package]
name = "stream_pulse"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
categories.workspace = true

[[bin]]
name = "stream-pulse-cron"
path = "./src/bin/stream-pulse-cron.rs"

[lib]
name = "stream_pulse"
path = "./src/lib/lib.rs"

[dependencies]
another-tiktoken-rs = { version = "0.1.2", features = ["async-openai"] }
anyhow = "1.0"
axum = "0.8.4"
chrono = { workspace = true }
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = { workspace = true }
openai_dive = "1.2.1"
rayon = "1.5"
regex = "1.10.6"
reqwest = { version = "0.12", features = ["json"] }
sentry = "0.41.0"
sentry-tracing = "0.41.0"
serde = { workspace = true }
serde_json = { workspace = true }
stream_datastore = { version = "0.1.0", path = "../stream_datastore" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "registry",
] }
uuid = { version = "1.17.0", features = ["v4"] }
ytdlp_bindings = { version = "0.1.0", path = "../ytdlp_bindings" }

[dev-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
