[package]
name = "ytdlp_bindings"
description = "ytdlp cli bindings"
authors = ["c12i <hello@c12i.xyz>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["asynchronous"]

[lib]
name = "ytdlp_bindings"
path = "./src/lib.rs"

[dependencies]
anyhow = "1.0.89"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
webvtt-parser = { version = "1.0.0-beta.1", optional = true }
tempfile = { version = "3.12.0", optional = true }
which = "8.0.0"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
glob = "0.3.1"
tempfile = "3.12.0"

[features]
default = [
  "tracing",
  "yt-dlp-vendored",
  "audio-processing",
  "video-processing",
  "vtt-processing",
]
tracing = ["dep:tracing"]
yt-dlp-vendored = ["dep:tempfile"]
audio-processing = []
video-processing = []
vtt-processing = ["dep:webvtt-parser"]
